Added utils function for the server to reliably connect to postgres via pool. Added collection querying. Fix image display on web. Will add collection thumbnail system next, and advanced query after, maybe
